--- a/Views/Products/Delete.cshtml
+++ b/Views/Products/Delete.cshtml
@@ -42,10 +42,14 @@
             @Html.DisplayFor(model => model.Category.CategoryName)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
+
+    <form asp-action="Delete" method="post">
         <input type="hidden" asp-for="ProductID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </form>
+
+
+
+
 </div>
